add basic html, add image files

--- a/index.html
+++ b/index.html
@@ -5,7 +5,30 @@
         <title>My Personal Website</title>
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <div class="intro">
+            <h1>Hey, I'm Moish</h1>
+            <h2>I'm currently studying coding at Flatiron'</h2>
+        </div>
+        <div class="about-me">
+            <p>I have always been interested in the inner workings of computers and a few months ago decided to give it a go. <br> So I signed up to bootcamp and here I am!</p>
+            <h3>Reasons I like programming:</h3>
+            <ul>
+                <li>Stimultes the brain</li>
+                <li>Much satisfaction with your work</li>
+                <li>Enables you to possibly work remotely</li>
+                <li>So much opportunity</li>
+                <li>Great pay</li>
+            </ul>
+        </div>
+        <div class="follow">
+            <p>Follow along my journey by clicking the spacebar</p>
+            <img id="baby" src="baby.jpg" alt="baby">
+            <caption>0%</caption>
+            <img id="confused" src="confused-guy.png" alt="confused-guy">
+            <caption>50%</caption>
+            <img id="einstein" src="einstein.png" alt="albert einstein">
+            <caption>100%</caption>
+        </div>
         <script src="script.js"></script>
     </body>
 </html>
