fix some html, add styling

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <body>
         <div class="intro">
             <h1>Hey, I'm Moish</h1>
-            <h2>I'm currently studying coding at Flatiron'</h2>
-        </div>
-        <div class="about-me">
+            <h2>I'm currently studying coding at Flatiron</h2>
             <p>I have always been interested in the inner workings of computers and a few months ago decided to give it a go. <br> So I signed up to bootcamp and here I am!</p>
+        </div>
+        <div class="list">
             <h3>Reasons I like programming:</h3>
             <ul>
                 <li>Stimultes the brain</li>
@@ -21,14 +21,17 @@
             </ul>
         </div>
         <div class="follow">
-            <p>Follow along my journey by clicking the spacebar</p>
-            <img id="baby" src="baby.jpg" alt="baby">
-            <caption>0%</caption>
-            <img id="confused" src="confused-guy.png" alt="confused-guy">
-            <caption>50%</caption>
-            <img id="einstein" src="einstein.png" alt="albert einstein">
-            <caption>100%</caption>
+            <h3>Follow along my journey: Press an option</h3>
+            <ul id="progress">
+                <li id="zero">0%</li>
+                <li id="fifty">50%</li>
+                <li id="hundred">100%</li>
+            </ul>
         </div>
+            <img id="baby" src="baby.jpg" alt="baby">
+            <img id="confused" src="confused-guy.png" alt="confused-guy">
+            <img id="einstein" src="einstein.png" alt="albert einstein">
+
         <script src="script.js"></script>
     </body>
 </html>
